--- a/jscli.html
+++ b/jscli.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
 <title>jscli</title>
 
 <!--
@@ -19,7 +20,8 @@ needed in the near future.
     display: block;
     width: 100%;
     box-sizing: border-box;
-    overflow-y: scroll;
+    overflow-y: auto;
+    white-space: pre-wrap;
     max-height: 90px;
     margin: 0;
 }
@@ -97,6 +99,6 @@ window.addEventListener('load', init)
 <!-- the cli itself -->
 <div class="jscli-container"><div id="wrap" class="jscli-wrap">
 <pre id="output" class="jscli"></pre>
-<input id="input" class="jscli">
+<input id="input" class="jscli" autofocus>
 </div></div>
 
