--- a/exmples/demo.html
+++ b/exmples/demo.html
@@ -11,8 +11,20 @@ needed in the near future.
 <link rel="stylesheet" href="../css/jscli.css"/>
 <script src="../js/jscli.js"></script>
 
-<!-- demo style -->
 <link rel="stylesheet" href="demo.css"/>
+<script src="jquery-1.7.2.min.js"></script>
+<script>
+window.addEventListener('load', function () {
+    jscli.eval = function (input) {
+        var output
+        try {
+            return $('<div>').html($('<span>').html(input).after($('<br>').after($('<span class="success">').html(String(window.eval(input)))))).html()
+        } catch (err) {
+            return $('<div>').html($('<span>').html(input).after($('<br>').after($('<span class="error">').html(err.message)))).html()
+        }
+    }
+}, false)
+</script>
 
 <!-- demo info-->
 <div class="container">
@@ -24,7 +36,7 @@ needed in the near future.
 
 <!-- the cli itself -->
 <div class="jscli-container"><div id="wrap" class="jscli-wrap">
-<pre id="output" class="jscli"></pre>
+<div id="output" class="jscli"></div>
 <input id="input" class="jscli" autofocus>
 </div></div>
 
