Fixing history and stuff.

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -40,3 +40,7 @@ window.addEventListener('load', function () {
 <input id="input" class="jscli" autofocus>
 </div></div>
 
+<!--
+  background pattern by Lea Verou
+  http://lea.verou.me/css3patterns/
+-->
